--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -102,8 +102,12 @@
         font-size: 2.6vw;
     }
     .container h2{
-        font-size: 4vw;
-    }
+    font-size: 4.2vw;
+    font-weight: 700;
+    display: flex;
+    flex-wrap: wrap;
+    text-transform: capitalize;
+}
     .container button{
         font-size: 4vw;
     }
